# infrared_transceiver

./: .gitignore  CMakeLists.txt  README.md  pytest_ir_nec.py
apps/infrared_test/: CMakeLists.txt  ir_nec_encoder.c  ir_nec_encoder.h
apps/system_demo/: CMakeLists.txt  mocks.c  mocks.h  system_demo_main.c
components/orchestrator/: CMakeLists.txt  orch.c
components/orchestrator/include/: orch.h
components/retrofit_os/include/: retrofit_os_types.h
docs/: DESIGN.md  DESIGN_TRADEOFFS.md  DEVELOPMENT_PLAN.md  ESP_IDF_MINI_FRAMEWORK.md  FLOWS.md  IR retrofit Architecture.drawio  SYSTEM_REQUIREMENTS.md  Smart retrofit architecture.drawio  TODO.md  testing_instructions.md
docs/components/: evt_bus.drawio  evt_bus.md  orchestrator.drawio
main/: ir_nec_transceiver_main.c
